# CalibratedClassification

./: README.rst  pyproject.toml
calibratedclassification/: DominoLoss.py  DominoLossW.py  RCR.py  helper_funcs.py  reliability_diagrams.py
tests/: test_calibratedclassification.py
